@@ -29,6 +29,7 @@ VERSION 2.8-Beta 1
      elements in order not to fool users.
 
   BUGFIXES:
+   * Don't remove common labels when editing the tags of multiple tracks. (BR 316043)
    * Fix vertical positioning of On-Screen-Display. (BR 269788)
    * Prevent inability to save Last.fm password in corner cases. (BR 315306)
    * Fix crash when quitting Amarok with Statistics Synchronization open. (BR 315525)
